force-app/main/default/objects/EYI_Home_Loan__c/EYI_Home_Loan__c.object-meta.xml
<CustomObject>
    <label>Home Loan</label>
    <nameField>
        <displayFormat>L-{0000}</displayFormat>
        <label>Loan</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Home Loans</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>