force-app/main/default/objects/EYI_Home_Loan__c/fields/APF_Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>APF_Unique_Id__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>APF Unique Id</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>