force-app/main/default/objects/EYI_Home_Loan__c/fields/Date_of_ROC_Upload__c.field-meta.xml
<CustomField>
    <fullName>Date_of_ROC_Upload__c</fullName>
    <label>Date of ROC Upload</label>
    <type>Date</type>
</CustomField>