force-app/main/default/objects/EYI_Home_Loan__c/fields/EYI_APF_Expiry_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_APF_Expiry_Date__c</fullName>
    <formula>EYI_APF_Name__r.EYI_Expiry_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>APF Expiry Date</label>
    <type>Date</type>
</CustomField>