force-app/main/default/objects/EYI_Home_Loan__c/fields/EYI_APF_Name__c.field-meta.xml
<CustomField>
    <fullName>EYI_APF_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>APF Name</label>
    <referenceTo>EYI_APF__c</referenceTo>
    <relationshipLabel>Home Loans</relationshipLabel>
    <relationshipName>Home_Loans</relationshipName>
    <type>Lookup</type>
</CustomField>