force-app/main/default/objects/EYI_Home_Loan__c/fields/EYI_Bank_Loan_Started_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Bank_Loan_Started_Date__c</fullName>
    <label>Bank Loan Started Date</label>
    <type>Date</type>
</CustomField>