force-app/main/default/objects/EYI_Home_Loan__c/fields/EYI_Banker_Email__c.field-meta.xml
<CustomField>
    <fullName>EYI_Banker_Email__c</fullName>
    <label>Banker Email</label>
    <type>Email</type>
</CustomField>