force-app/main/default/objects/EYI_Home_Loan__c/fields/EYI_Banker_Escalation_Mobile__c.field-meta.xml
<CustomField>
    <fullName>EYI_Banker_Escalation_Mobile__c</fullName>
    <label>Banker Escalation Mobile</label>
    <type>Phone</type>
</CustomField>