force-app/main/default/objects/EYI_Home_Loan__c/fields/EYI_Banker_Escalation_Name__c.field-meta.xml
<CustomField>
    <fullName>EYI_Banker_Escalation_Name__c</fullName>
    <label>Banker Escalation Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>