force-app/main/default/objects/EYI_Home_Loan__c/fields/EYI_Banker_Mobile__c.field-meta.xml
<CustomField>
    <fullName>EYI_Banker_Mobile__c</fullName>
    <description>This field used to store the mobile number of Banker.</description>
    <label>Banker Mobile</label>
    <type>Phone</type>
</CustomField>