force-app/main/default/objects/EYI_Home_Loan__c/fields/EYI_Banker_Name__c.field-meta.xml
<CustomField>
    <fullName>EYI_Banker_Name__c</fullName>
    <description>This field is used to add banker name on loan</description>
    <label>Banker Name</label>
    <length>30</length>
    <type>Text</type>
</CustomField>