force-app/main/default/objects/EYI_Home_Loan__c/fields/EYI_Closing_Manager__c.field-meta.xml
<CustomField>
    <fullName>EYI_Closing_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Closing Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Home_Loans1</relationshipName>
    <type>Lookup</type>
</CustomField>