force-app/main/default/objects/EYI_Home_Loan__c/fields/EYI_Closure_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Closure_Date__c</fullName>
    <label>Closure Date</label>
    <type>Date</type>
</CustomField>