force-app/main/default/objects/EYI_Home_Loan__c/fields/EYI_Closure_Reason__c.field-meta.xml
<CustomField>
    <fullName>EYI_Closure_Reason__c</fullName>
    <label>Closure Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Eligibility issues</fullName>
            </value>
            <value>
                <fullName>Switch to another bank</fullName>
            </value>
            <value>
                <fullName>Self-funding</fullName>
            </value>
            <value>
                <fullName>Booking cancellation</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>