force-app/main/default/objects/EYI_Home_Loan__c/fields/EYI_Conditional_Sanction__c.field-meta.xml
<CustomField>
    <fullName>EYI_Conditional_Sanction__c</fullName>
    <label>Conditional Sanction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>