force-app/main/default/objects/EYI_Home_Loan__c/fields/EYI_Conditional_Sanction_Remark__c.field-meta.xml
<CustomField>
    <fullName>EYI_Conditional_Sanction_Remark__c</fullName>
    <label>Conditional Sanction Remark</label>
    <type>TextArea</type>
</CustomField>