force-app/main/default/objects/EYI_Home_Loan__c/fields/EYI_Conga_Template_Id_NOC__c.field-meta.xml
<CustomField>
    <fullName>EYI_Conga_Template_Id_NOC__c</fullName>
    <formula>EYI_Bank_Details__r.EYI_Conga_Template_Id_for_NOC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conga Template Id (NOC)</label>
    <type>Text</type>
</CustomField>