force-app/main/default/objects/EYI_Home_Loan__c/fields/EYI_Customers_Profile__c.field-meta.xml
<CustomField>
    <fullName>EYI_Customers_Profile__c</fullName>
    <label>Customer&apos;s Profile</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Salaried</fullName>
            </value>
            <value>
                <fullName>Self Employed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>