force-app/main/default/objects/EYI_Home_Loan__c/fields/EYI_Date_Today__c.field-meta.xml
<CustomField>
    <fullName>EYI_Date_Today__c</fullName>
    <formula>TEXT(TODAY())</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Today</label>
    <type>Text</type>
</CustomField>