force-app/main/default/objects/EYI_Home_Loan__c/fields/EYI_Disbursement_Docket_Handed_Over_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Disbursement_Docket_Handed_Over_Date__c</fullName>
    <label>Disbursement Docket Handed Over Date</label>
    <type>Date</type>
</CustomField>