force-app/main/default/objects/EYI_Home_Loan__c/fields/EYI_First_Disbursement_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_First_Disbursement_Date__c</fullName>
    <label>First Disbursement Date</label>
    <type>Date</type>
</CustomField>