force-app/main/default/objects/EYI_Home_Loan__c/fields/EYI_First_Disbursement_Status__c.field-meta.xml
<CustomField>
    <fullName>EYI_First_Disbursement_Status__c</fullName>
    <label>First Disbursement Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
                <isActive>false</isActive>
                <label>Completed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>