force-app/main/default/objects/EYI_Home_Loan__c/fields/EYI_Loan_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>EYI_Loan_Account_Number__c</fullName>
    <label>Loan Account Number</label>
    <length>18</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>