force-app/main/default/objects/EYI_Home_Loan__c/fields/EYI_Loan_Closure_Other_Reason__c.field-meta.xml
<CustomField>
    <fullName>EYI_Loan_Closure_Other_Reason__c</fullName>
    <label>Loan Closure Other Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>