force-app/main/default/objects/EYI_Home_Loan__c/fields/EYI_Loan_Executive__c.field-meta.xml
<CustomField>
    <fullName>EYI_Loan_Executive__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Loan Executive</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Home_Loans2</relationshipName>
    <type>Lookup</type>
</CustomField>