force-app/main/default/objects/EYI_Home_Loan__c/fields/EYI_Mode_of_Funding__c.field-meta.xml
<CustomField>
    <fullName>EYI_Mode_of_Funding__c</fullName>
    <description>This field to show mode of funding</description>
    <formula>TEXT( EYI_Opportunity__r.EYI_Mode_of_Funding__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Mode of Funding</label>
    <type>Text</type>
</CustomField>