force-app/main/default/objects/EYI_Home_Loan__c/fields/EYI_NOC_Date_Updated__c.field-meta.xml
<CustomField>
    <fullName>EYI_NOC_Date_Updated__c</fullName>
    <description>It is used for handle LRP for NOC Generate button</description>
    <formula>NOT(ISBLANK(NOC_Document_Generated_Date__c))</formula>
    <label>NOC Date Updated</label>
    <type>Checkbox</type>
</CustomField>