force-app/main/default/objects/EYI_Home_Loan__c/fields/EYI_NOC_with_PeriPassu__c.field-meta.xml
<CustomField>
    <fullName>EYI_NOC_with_PeriPassu__c</fullName>
    <formula>AND(
    NOT(ISBLANK(NOC_Document_Generated_Date__c)),
    IsPariPassu__c
)</formula>
    <label>NOC with PeriPassu</label>
    <type>Checkbox</type>
</CustomField>