force-app/main/default/objects/EYI_Home_Loan__c/fields/EYI_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>EYI_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Home Loans</relationshipLabel>
    <relationshipName>Home_Loans</relationshipName>
    <type>Lookup</type>
</CustomField>