force-app/main/default/objects/EYI_Home_Loan__c/fields/EYI_Project__c.field-meta.xml
<CustomField>
    <fullName>EYI_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>EYI_Project__c</referenceTo>
    <relationshipLabel>Home Loans</relationshipLabel>
    <relationshipName>Home_Loans</relationshipName>
    <type>Lookup</type>
</CustomField>