force-app/main/default/objects/EYI_Home_Loan__c/fields/EYI_Sanction_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Sanction_Date__c</fullName>
    <label>Loan Sanction Date</label>
    <type>Date</type>
</CustomField>