force-app/main/default/objects/EYI_Home_Loan__c/fields/EYI_Sanction_Letter_Uploaded__c.field-meta.xml
<CustomField>
    <fullName>EYI_Sanction_Letter_Uploaded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox will check, when Sanction Letter Uploaded by flow.</description>
    <label>Sanction Letter Uploaded</label>
    <type>Checkbox</type>
</CustomField>