force-app/main/default/objects/EYI_Home_Loan__c/fields/EYI_Sanction_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_Sanction_Received_Date__c</fullName>
    <label>Sanction Received Date (RM)</label>
    <type>Date</type>
</CustomField>