force-app/main/default/objects/EYI_Home_Loan__c/fields/EYI_Sanction_Rejection_Reason__c.field-meta.xml
<CustomField>
    <fullName>EYI_Sanction_Rejection_Reason__c</fullName>
    <label>Sanction Rejection Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>CIBIL Issue</fullName>
            </value>
            <value>
                <fullName>Customer Stalling/Not Submitting Docs</fullName>
            </value>
            <value>
                <fullName>Cancellation</fullName>
            </value>
            <value>
                <fullName>Transfer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>