force-app/main/default/objects/EYI_Home_Loan__c/fields/EYI_Sanction_Status__c.field-meta.xml
<CustomField>
    <fullName>EYI_Sanction_Status__c</fullName>
    <label>Sanction Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Loan Sanctioned</fullName>
            </value>
            <value>
                <fullName>Not-Sanction</fullName>
                <label>Loan Sanction Rejected</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>