force-app/main/default/objects/EYI_Home_Loan__c/fields/EYI_Sanction_Unique_ID__c.field-meta.xml
<CustomField>
    <fullName>EYI_Sanction_Unique_ID__c</fullName>
    <label>Sanction Unique ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>