force-app/main/default/objects/EYI_Home_Loan__c/fields/EYI_Source_of_Home_Loan__c.field-meta.xml
<CustomField>
    <fullName>EYI_Source_of_Home_Loan__c</fullName>
    <label>Source of Home Loan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In-house</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>