force-app/main/default/objects/EYI_Home_Loan__c/fields/EYI_Status__c.field-meta.xml
<CustomField>
    <fullName>EYI_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Loan Process Initiated</fullName>
                <default>true</default>
                <label>Loan Process Initiated</label>
            </value>
            <value>
                <fullName>HL documentation initiated</fullName>
                <label>HL Documentation Initiated</label>
            </value>
            <value>
                <fullName>Loan sanction in progress</fullName>
                <label>Loan Sanction In Progress</label>
            </value>
            <value>
                <fullName>Loan sanctioned</fullName>
                <label>Loan Sanctioned</label>
            </value>
            <value>
                <fullName>NOC generated</fullName>
                <label>NOC Generated</label>
            </value>
            <value>
                <fullName>First Amount Disbursed</fullName>
            </value>
            <value>
                <fullName>Loan Started</fullName>
            </value>
            <value>
                <fullName>Loan sanction rejected</fullName>
                <label>Loan Sanction Rejected</label>
            </value>
            <value>
                <fullName>Loan Closed</fullName>
            </value>
            <value>
                <fullName>First Disbursement received</fullName>
                <isActive>false</isActive>
                <label>First Disbursement Received</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>