force-app/main/default/objects/EYI_Home_Loan__c/fields/EYI_Total_Disbursed_Amount__c.field-meta.xml
<CustomField>
    <fullName>EYI_Total_Disbursed_Amount__c</fullName>
    <label>Total Disbursed Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>