force-app/main/default/objects/EYI_Home_Loan__c/fields/EYI_TPA_Case__c.field-meta.xml
<CustomField>
    <fullName>EYI_TPA_Case__c</fullName>
    <description>If select TPA, the RM uploads the TPA letter and updates the TPA date in the system for the loan.</description>
    <label>TPA Case</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>TPA</fullName>
            </value>
            <value>
                <fullName>Non-TPA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>