force-app/main/default/objects/EYI_Home_Loan__c/fields/EYI_TPA_Signed_Date__c.field-meta.xml
<CustomField>
    <fullName>EYI_TPA_Signed_Date__c</fullName>
    <description>If TPA, the RM uploads the TPA letter and updates the TPA date in the system for the loan.</description>
    <label>TPA Signed Date</label>
    <type>Date</type>
</CustomField>