force-app/main/default/objects/EYI_Home_Loan__c/fields/EYI_Unit__c.field-meta.xml
<CustomField>
    <fullName>EYI_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Unit</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.EYI_Opportunity__c</field>
            <operation>equals</operation>
            <valueField>EYI_Inventory__c.EYI_Opportunity__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>EYI_Inventory__c</referenceTo>
    <relationshipLabel>Home Loans</relationshipLabel>
    <relationshipName>Home_Loans</relationshipName>
    <type>Lookup</type>
</CustomField>