force-app/main/default/objects/EYI_Home_Loan__c/fields/EYI_Upload_TPA_Letter__c.field-meta.xml
<CustomField>
    <fullName>EYI_Upload_TPA_Letter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If TPA Letter uploaded, then this checkbox will be checked</description>
    <label>Upload TPA Letter</label>
    <type>Checkbox</type>
</CustomField>