force-app/main/default/objects/EYI_Home_Loan__c/fields/IsPariPassu__c.field-meta.xml
<CustomField>
    <fullName>IsPariPassu__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Pari-Passu?</label>
    <type>Checkbox</type>
</CustomField>