force-app/main/default/objects/EYI_Home_Loan__c/fields/Loan_Created_to_Sanction_Date__c.field-meta.xml
<CustomField>
    <fullName>Loan_Created_to_Sanction_Date__c</fullName>
    <formula>EYI_Sanction_Received_Date__c - DATEVALUE(CreatedDate)</formula>
    <label>Loan Created to Sanction Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>