force-app/main/default/objects/EYI_Home_Loan__c/fields/Loan_Sanction_to_First_Disbursement_Date__c.field-meta.xml
<CustomField>
    <fullName>Loan_Sanction_to_First_Disbursement_Date__c</fullName>
    <formula>EYI_First_Disbursement_Date__c - EYI_Sanction_Received_Date__c</formula>
    <label>Loan Sanction to First Disbursement Date</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>