force-app/main/default/objects/EYI_Home_Loan__c/fields/NOC_Document_Generated_Date__c.field-meta.xml
<CustomField>
    <fullName>NOC_Document_Generated_Date__c</fullName>
    <label>NOC Document Generated Date</label>
    <type>Date</type>
</CustomField>