force-app/main/default/objects/EYI_Home_Loan__c/fields/Record_Inactive_Date__c.field-meta.xml
<CustomField>
    <fullName>Record_Inactive_Date__c</fullName>
    <formula>IF( EYI_Active__c == false,  TODAY() , null)</formula>
    <label>Record Inactive Date</label>
    <type>Date</type>
</CustomField>