force-app/main/default/objects/EYI_Home_Loan__c/fields/Sanction_not_Received_within_15_Days__c.field-meta.xml
<CustomField>
    <fullName>Sanction_not_Received_within_15_Days__c</fullName>
    <formula>(EYI_Sanction_Received_Date__c  &gt; (DATEVALUE(CreatedDate) + 15))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sanction not Received within 15 Days</label>
    <type>Checkbox</type>
</CustomField>