force-app/main/default/objects/EYI_Home_Loan__c/validationRules/Docket_readiness_should_not_future_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Docket_readiness_should_not_future_date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(   EYI_IsAutomationBypassed__c  =false ,  ISCHANGED( EYI_Disbursement_Docket_Readiness_Date__c ) ,NOT( ISNULL(EYI_Disbursement_Docket_Readiness_Date__c))
,EYI_Disbursement_Docket_Readiness_Date__c &gt; TODAY() )</errorConditionFormula>
    <errorDisplayField>EYI_Disbursement_Docket_Readiness_Date__c</errorDisplayField>
    <errorMessage>Please enter valid Disbursement Docket Readiness Date.</errorMessage>
</ValidationRule>