force-app/main/default/objects/EYI_Home_Loan__c/validationRules/First_Disburmen_date_shoul_not_future_da.validationRule-meta.xml
<ValidationRule>
    <fullName>First_Disburmen_date_shoul_not_future_da</fullName>
    <active>true</active>
    <errorConditionFormula>AND(   EYI_IsAutomationBypassed__c  =false ,  ISCHANGED( EYI_First_Disbursement_Date__c ) ,NOT( ISNULL(EYI_First_Disbursement_Date__c))
,EYI_First_Disbursement_Date__c &gt; TODAY() )</errorConditionFormula>
    <errorDisplayField>EYI_Sanction_Date__c</errorDisplayField>
    <errorMessage>First Disbursement Date cannot be future date.</errorMessage>
</ValidationRule>