force-app/main/default/objects/EYI_Home_Loan__c/validationRules/First_Disbursement_date_GT_Sanction_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>First_Disbursement_date_GT_Sanction_Date</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  EYI_IsAutomationBypassed__c = FALSE,
  EYI_First_Disbursement_Date__c &lt; EYI_Sanction_Received_Date__c
)</errorConditionFormula>
    <errorMessage>First Disbursement Date should be greater than Sanction Received Date.</errorMessage>
</ValidationRule>