force-app/main/default/objects/EYI_Home_Loan__c/validationRules/First_Disbursement_Status_to_Recived.validationRule-meta.xml
<ValidationRule>
    <fullName>First_Disbursement_Status_to_Recived</fullName>
    <active>true</active>
    <errorConditionFormula>AND(EYI_IsAutomationBypassed__c = false,
    NOT(ISPICKVAL(EYI_First_Disbursement_Status__c, &quot;Received&quot;)),
    ISPICKVAL(EYI_Status__c, &quot;First Amount Disbursed&quot;)

)</errorConditionFormula>
    <errorMessage>You can&apos;t change status without updating First Disbursement Status to Received</errorMessage>
</ValidationRule>