force-app/main/default/objects/EYI_Home_Loan__c/validationRules/Loan_Sanction_mandatory_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Loan_Sanction_mandatory_Fields</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(EYI_IsAutomationBypassed__c)  &amp;&amp; 
NOT(ISPICKVAL(EYI_Status__c, &apos;Loan Process Initiated&apos;) ||  ISPICKVAL(EYI_Status__c, &apos;HL documentation initiated&apos;) ||  ISPICKVAL(EYI_Status__c, &apos;Loan Sanction In Progress&apos;) ||  ISPICKVAL(EYI_Status__c, &apos;Loan Closed&apos;)
) &amp;&amp;
ISBLANK(EYI_Sanction_Amount__c)</errorConditionFormula>
    <errorDisplayField>EYI_Status__c</errorDisplayField>
    <errorMessage>Please provide Loan Sanction Details and Loan Account Number!</errorMessage>
</ValidationRule>