force-app/main/default/objects/EYI_Home_Loan__c/validationRules/Loan_Sanctioned_date_not_more_than_recei.validationRule-meta.xml
<ValidationRule>
    <fullName>Loan_Sanctioned_date_not_more_than_recei</fullName>
    <active>true</active>
    <errorConditionFormula>AND(   EYI_IsAutomationBypassed__c  =false ,  ISCHANGED(EYI_Sanction_Date__c) ,NOT( ISNULL(EYI_Sanction_Date__c)), NOT(ISNULL(EYI_Sanction_Received_Date__c ))
,EYI_Sanction_Date__c &gt; EYI_Sanction_Received_Date__c  )</errorConditionFormula>
    <errorDisplayField>EYI_Sanction_Date__c</errorDisplayField>
    <errorMessage>Loan sanction date cannot be after Loan sanction received date.</errorMessage>
</ValidationRule>