force-app/main/default/objects/EYI_Home_Loan__c/validationRules/Loan_Sanctioned_date_shoul_not_future_da.validationRule-meta.xml
<ValidationRule>
    <fullName>Loan_Sanctioned_date_shoul_not_future_da</fullName>
    <active>true</active>
    <errorConditionFormula>AND(   EYI_IsAutomationBypassed__c  =false ,  ISCHANGED(EYI_Sanction_Date__c) ,NOT( ISNULL(EYI_Sanction_Date__c))
,EYI_Sanction_Date__c &gt; TODAY() )</errorConditionFormula>
    <errorDisplayField>EYI_Sanction_Date__c</errorDisplayField>
    <errorMessage>Loan Sanction Date cannot be future date.</errorMessage>
</ValidationRule>