force-app/main/default/objects/EYI_Home_Loan__c/validationRules/Loan_Sanctioned_File_Upload_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Loan_Sanctioned_File_Upload_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(EYI_IsAutomationBypassed__c = false,AND(
    ISPICKVAL(EYI_Status__c, &quot;Loan Sanctioned&quot;),
    OR(
        ISPICKVAL(EYI_Source_of_Home_Loan__c, &quot;&quot;),  
        ISBLANK(TEXT(EYI_Source_of_Home_Loan__c))
    ),
    NOT(ISCHANGED(EYI_Status__c))
))</errorConditionFormula>
    <errorMessage>Sanction Letter is mandatory for this loan status. Click on Upload Sanction Letter to Upload letter.</errorMessage>
</ValidationRule>