force-app/main/default/objects/EYI_Home_Loan__c/validationRules/Sanction_Amount_cannot_be_negative.validationRule-meta.xml
<ValidationRule>
    <fullName>Sanction_Amount_cannot_be_negative</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(EYI_IsAutomationBypassed__c)  &amp;&amp;  EYI_Sanction_Amount__c   &lt; 1</errorConditionFormula>
    <errorDisplayField>EYI_Sanction_Amount__c</errorDisplayField>
    <errorMessage>Amount is invalid, Please enter a valid amount!</errorMessage>
</ValidationRule>