force-app/main/default/objects/EYI_Home_Loan__c/validationRules/Sanction_Received_Dae_shoul_not_future.validationRule-meta.xml
<ValidationRule>
    <fullName>Sanction_Received_Dae_shoul_not_future</fullName>
    <active>true</active>
    <errorConditionFormula>AND(   EYI_IsAutomationBypassed__c  =false ,  ISCHANGED( EYI_Sanction_Received_Date__c ) ,NOT( ISNULL(EYI_Sanction_Received_Date__c))
,EYI_Sanction_Received_Date__c &gt; TODAY() )</errorConditionFormula>
    <errorDisplayField>EYI_Sanction_Received_Date__c</errorDisplayField>
    <errorMessage>Please enter valid Sanction Received Date (RM).</errorMessage>
</ValidationRule>