force-app/main/default/objects/EYI_Home_Loan__c/validationRules/Sanction_Status_should_be_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Sanction_Status_should_be_mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND( EYI_IsAutomationBypassed__c =false,
 ISPICKVAL( EYI_Status__c, &quot;Loan sanction rejected&quot;),
 ISBLANK( TEXT(EYI_Sanction_Rejection_Reason__c) ) 
)</errorConditionFormula>
    <errorDisplayField>EYI_Sanction_Rejection_Reason__c</errorDisplayField>
    <errorMessage>Please select valid sanction reason.</errorMessage>
</ValidationRule>