force-app/main/default/objects/EYI_Home_Loan__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>EYI_Active__c</columns>
    <columns>EYI_Status__c</columns>
    <columns>EYI_Sanction_Status__c</columns>
    <columns>EYI_Opportunity__c</columns>
    <columns>EYI_Project__c</columns>
    <columns>EYI_Bank_Details__c</columns>
    <columns>EYI_Closing_Manager__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>EYI_First_Disbursement_Status__c</columns>
    <columns>EYI_First_Disbursement_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>